@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-27T00:42:46Z",
-  "count" : 3,
-  "count_minmax" : [ 3, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 3,
-  "uniques_minmax" : [ 3, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "timestamp" : "2024-09-09T12:18:39Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 3 ],
+  "count_decinc" : [ -1, +3 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 3 ],
+  "uniques_decinc" : [ -1, +3 ]
 }
