@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-09-09T00:46:28Z",
+  "timestamp" : "2024-09-09T12:18:39Z",
   "count_outdated" : 4440,
   "uniques_outdated" : 2190,
-  "count" : 4462,
-  "uniques" : 2212,
+  "count" : 4465,
+  "uniques" : 2215,
   "clones" : [
     {
       "timestamp": "2024-08-26T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "count": 2,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 1, 3 ]
     },
     {
       "timestamp": "2024-08-27T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-09T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
