@@ -1,11 +1,11 @@
 {
-  "count": 22,
-  "uniques": 19,
+  "count": 24,
+  "uniques": 22,
   "clones": [
     {
       "timestamp": "2024-08-26T00:00:00Z",
-      "count": 3,
-      "uniques": 3
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2024-08-27T00:00:00Z",
@@ -46,6 +46,11 @@
       "timestamp": "2024-09-08T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-09T00:00:00Z",
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
